[project]
name = "comfyui-hiero-nodes"
description = "Nodes:Post to Discord w/ Webhook"
version = "1.0.0"
license = "LICENSE"
dependencies = ["numpy", "Pillow", "discord-webhook"]

[project.urls]
Repository = "https://github.com/Hiero207/ComfyUI-Hiero-Nodes"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-Hiero-Nodes"
Icon = ""
